--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,35 +10,20 @@ jobs:
     strategy:  
       fail-fast: false  
       matrix:  
-        python-version:
-          - "3.10"
-          - "3.11"
-          - "3.12"
-          - "3.13"
-    steps:
+        python-version: ["3.12"]  
+    steps:  
     - uses: actions/checkout@v4  
     - name: Set up Python ${{ matrix.python-version }}  
       uses: actions/setup-python@v4  
       with:  
-        python-version: ${{ matrix.python-version }}
-    - name: Install uv
-      uses: astral-sh/setup-uv@v5
-    - name: Install the project
-      run: uv sync --all-extras --dev
+        python-version: ${{ matrix.python-version }} 
+    - name: Install poetry
+      uses: abatilo/actions-poetry@v2
+    - name: Install project dependencies
+      run: poetry install --with dev
     - name: Run lint
-      run: |
-        uv run ruff check --fix
-        uv run ruff format --line-length 110
+      run:  |
+        poetry run ruff check --fix .
+        poetry run ruff format --line-length 110 .
     - name: Run tests
-      run: uv run pytest -v --cov=./serpio --cov-fail-under=90 --cov-report=xml
-    - name: Upload coverage to Codecov
-      uses: codecov/codecov-action@v4
-      with:
-        directory: ./coverage/reports/
-        env_vars: OS,PYTHON
-        fail_ci_if_error: true
-        files: ./coverage.xml,!./cache
-        flags: unittests
-        name: codecov-umbrella
-        token: ${{ secrets.CODECOV_TOKEN }}
-        verbose: true
+      run: poetry run pytest -vv .
