--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,23 +1,24 @@
-[project]
-name = "serpio"
+[tool.poetry]
+name = "fumus"
 version = "0.1.0"
+authors = ["kaliv0 <kaloyan.ivanov88@gmail.com>"]
 readme = "README.md"
-license = "LICENSE"
-description = "Functional-style Streams library for processing collections. Provides easy integration with itertools"
-authors = [{name = "kaliv0", email = "kaloyan.ivanov88@gmail.com"}]
+description = "Functional musings"
 keywords = ["stream", "functional", "processing", "collections", "fluent API", "queries"]
-repository = "https://github.com/kaliv0/serpio"
-documentation = "https://serpio.readthedocs.io/en/latest"
+repository = "https://github.com/kaliv0/fumus"
+#documentation = "https://fumus.readthedocs.io/en/latest"
 
-requires-python = ">=3.12"
+[tool.poetry.dependencies]
+python = "^3.12"
 
-[dependency-groups]
-dev = [
-    "myst-nb>=1.1.2",
-    "pytest>=8.3.4",
-    "pytest-cov>=6.0.0",
-    "ruff>=0.9.1",
-    "sphinx>=8.1.3",
-    "sphinx-autoapi>=3.4.0",
-    "sphinx-rtd-theme>=3.0.2",
-]
+[tool.poetry.group.dev.dependencies]
+ruff = "^0.6.3"
+pytest = "^8.3.2"
+myst-nb = "^1.1.2"
+sphinx = "^8.1.3"
+sphinx-rtd-theme = "^3.0.2"
+sphinx-autoapi = "^3.3.3"
+
+[build-system]
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
